--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="home_btn_hasil_sebelumnya">Lihat Hasil Sebelumnya</string>
     <string name="home_informasi_lain">Informasi Lain</string>
     <string name="home_tentang_covid">Tentang COVID-19</string>
-    <string name="home_sub_tc">Update terbaru perkembangan di Indonesia dan cara mencegahnya.</string>
+    <string name="home_sub_tc">Update terbaru perkembangan COVID-19 di Indonesia.</string>
     <string name="home_profil_developer">Profil Developer</string>
     <string name="home_sub_pd">Informasi tentang Developer yang mengembangkan aplikasi ini.</string>
 
